Refs #34 ensure floated images from content area don't spill over next accordion title

--- a/src/components/manage/Blocks/Accordion/editor.less
+++ b/src/components/manage/Blocks/Accordion/editor.less
@@ -86,6 +86,7 @@
 .accordion-block {
   .accordion {
     margin-top: 0 !important;
+    clear: both; /* ensure floated images from content area don't spill over next accordion title */
   }
 
   .accordion-title {
